@@ -248,10 +248,10 @@ classdef swpdet___UTEST < matlab.unittest.TestCase
       hkBiasCurrentFpa = bicas.utils.FPArray.floatNan2int(S.hkBiasCurrent, 'uint16');
 
       Bso = bicas.create_default_BSO();
-      Bso.override_value('PROCESSING.L2.DETECT_SWEEPS.SBDA_SCDA_BOUNDARY_UTC', spdfbreakdowntt2000(S.sbdaEndTt2000),     'test');
-      Bso.override_value('PROCESSING.L2.DETECT_SWEEPS.SCDA.WINDOW_LENGTH_PTS',                     S.windowLengthPts,    'test');
-      Bso.override_value('PROCESSING.L2.DETECT_SWEEPS.SCDA.WINDOW_MINMAX_DIFF_MINIMUM_TM',         S.currentMmDiffMinTm, 'test');
-      Bso.override_value('PROCESSING.L2.DETECT_SWEEPS.SCDA.WINDOW_MARGIN_SEC',                     S.windowMarginSec,    'test');
+      Bso.override_value('PROCESSING.L2.SWEEP_DETECTION.SBDA_SCDA_BOUNDARY_UTC', spdfbreakdowntt2000(S.sbdaEndTt2000),     'test');
+      Bso.override_value('PROCESSING.L2.SWEEP_DETECTION.SCDA.WINDOW_LENGTH_PTS',                     S.windowLengthPts,    'test');
+      Bso.override_value('PROCESSING.L2.SWEEP_DETECTION.SCDA.WINDOW_MINMAX_DIFF_MINIMUM_TM',         S.currentMmDiffMinTm, 'test');
+      Bso.override_value('PROCESSING.L2.SWEEP_DETECTION.SCDA.WINDOW_MARGIN_SEC',                     S.windowMarginSec,    'test');
       Bso.make_read_only()
 
       % CALL TESTED FUNCTION
